--- a/css/layout.css
+++ b/css/layout.css
@@ -95,27 +95,68 @@ footer {
 }
 /* older mobile */
 @media only screen and (min-width: 320px) {
-    /*.showdescription {
-        text-overflow: ellipsis;
+    div.tvshow{
+        width: 310px;
+        height: 250px;
+        display: block;   
+    }
+
+    .showdescription {
+        display: none;
+    }
+    .description-section{
         display: block;
-        white-space: nowrap;
-        width: 5px;
-        overflow: hidden;
-    }*/
+        width: 310px;
+    }
+    .thumbnail {
+        display: inline-block;
+        width: 300px;
+        height: 160px;
+    }
 }
 
 /* mobile */
 @media only screen and (min-width: 480px) {
+    div.tvshow{
+        width: 480px;
+        height: 382px;
+        display: block;   
+    }
+
+    .showdescription {
+        display: none;
+    }
+    .description-section{
+        display: block;
+        width: 470px;
+    }
+    .thumbnail {
+        display: inline-block;
+        width: 470px;
+        height: 374px;
+    }
 }
 
 /* small  screens & tablets */
 @media only screen and (min-width: 768px) {
-    .showdescription {
-        text-overflow: ellipsis;
-        display: block;
-        white-space: nowrap;
-        overflow: hidden;
+    div.tvshow{
+        width: 310px;
+        height: 250px;
+        display: block;   
     }
+
+    .showdescription {
+        display: none;
+    }
+    .description-section{
+        display: block;
+        width: 310px;
+    }
+    .thumbnail {
+        display: inline-block;
+        width: 300px;
+        height: 160px;
+    } 
 }
 
 /* normal screen */
